--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mashal — Digital Art Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="app-icon.png" type="image/x-icon">
 
 </head>
 
