added new changes

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="canvas-container">
-                    <canvas id="artCanvas" width="1200" height="800"></canvas>
+                    <canvas id="artCanvas" width="1200" height="800" style="width: 100%;"></canvas>
                     <div class="brush-cursor" id="brushCursor"></div>
                 </div>
             </section>
